# dokken

./: .dokken.toml  .gitignore  .mise.toml  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ISSUES_TO_CREATE.md  MULTI_DOC_TYPE_PLAN.md  Makefile  README.md  create_issues.py  pyproject.toml  release-please-config.json  renovate.json
.claude/: README.md  code-review-agent.md  settings.json
.claude/agents/: code-review.json
.claude/commands/: lint-test.md  review-branch.md  review.md
.claude/hooks/: format-and-lint.sh  run-tests.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  dokken-drift-check.yml  publish-pypi.yml  release-please.yml  renovate-auto-merge.yml
docs/: architectural-rules-implementation-plan.md  future-improvements.md  ideas.md  prompt-injection-mitigation.md  releasing-to-pypi.md  style-guide.md  test-simplification-roadmap.md
examples/: .dokken.toml  README.md  dokken-drift-check.yml
src/: README.md  cache.py  code_analyzer.py  config.py  constants.py  doc_configs.py  doc_merger.py  file_utils.py  formatters.py  git.py  human_in_the_loop.py  llm.py  main.py  prompts.py  records.py  utils.py  workflows.py
src/config/: loader.py  merger.py  models.py  types.py
src/doctypes/: __init__.py  configs.py
src/input/: code_analyzer.py  human_in_the_loop.py
src/llm/: __init__.py  llm.py  prompt_builder.py  prompts.py
src/security/: __init__.py  input_validation.py
src/tests/: conftest.py  test_code_analyzer.py  test_config.py  test_doc_types.py  test_exceptions.py  test_formatters.py  test_git.py  test_human_in_the_loop.py  test_llm.py  test_main.py  test_prompts.py  test_workflows.py
tests/: README.md  conftest.py  test_cache.py  test_claude_config.py  test_code_analyzer.py  test_config.py  test_doc_configs.py  test_doc_merger.py  test_doc_types.py  test_error_handling.py  test_file_utils.py  test_formatters.py  test_human_in_the_loop.py  test_integration.py  test_llm.py  test_main.py  test_prompt_builder.py  test_prompts.py  test_property_based.py  test_records.py  test_security.py  test_utils.py  test_workflows.py
